--- a/WebContent/include/featured.jspf
+++ b/WebContent/include/featured.jspf
@@ -4,7 +4,7 @@
           <div id='ftdoc' name='ftdoc'>
              <a href="/cinefiles/DocDetail?docId=4806">
              <img id='featuredImg' name='featuredImg'
-                  src="/cine_img/www_imgs.10/4806.p1.jpeg"
+                  src="/cinefiles/cine_img/www_imgs.10/4806.p1.jpeg"
                   width="225" /></a>
           </div>
 
