--- a/WebContent/include/browsefeatured.jspf
+++ b/WebContent/include/browsefeatured.jspf
@@ -12,203 +12,203 @@
   <div id='browsePane' name='browsePane'>
     <div id='browselist' name='browselist'>
       <a href="/cinefiles/DocDetail?docId=367">
-        <img alt="View " src="/cine_img/www_imgs.1/t/367.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.1/t/367.p1.jpeg"></a>
           Ivan the terrible part I : Global strategy and Anastasia'sfuneral
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=2960">
-        <img alt="View " src="/cine_img/www_imgs.6/t/2960.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.6/t/2960.p1.jpeg"></a>
           Alexandrie...pourquoi?
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=6093">
-        <img alt="View " src="/cine_img/www_imgs.13/t/6093.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.13/t/6093.p1.jpeg"></a>
           Sans soleil
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=6099">
-        <img alt="View " src="/cine_img/www_imgs.13/t/6099.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.13/t/6099.p1.jpeg"></a>
           Aria
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=6262">
-        <img alt="View " src="/cine_img/www_imgs.13/t/6262.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.13/t/6262.p1.jpeg"></a>
           Getting ready for the golden eighties:  a conversation with Chantal Akerman
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=6997">
-        <img alt="View " src="/cine_img/www_imgs.14/t/6997.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.14/t/6997.p1.jpeg"></a>
           Stan Brakhage and Ed Emshwiller
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=7013">
-        <img alt="View " src="/cine_img/www_imgs.15/t/7013.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.15/t/7013.p1.jpeg"></a>
           The match factory girl
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=9421">
-        <img alt="View " src="/cine_img/www_imgs.19/t/9421.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.19/t/9421.p1.jpeg"></a>
           Cassavetes on Cassavetes
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=10492">
-        <img alt="View " src="/cine_img/www_imgs.21/t/10492.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.21/t/10492.p1.jpeg"></a>
           Harun Farocki:  a retrospective
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=10589">
-        <img alt="View " src="/cine_img/www_imgs.22/t/10589.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.22/t/10589.p1.jpeg"></a>
           Au hasard Balthazar
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=11152">
-        <img alt="View " src="/cine_img/www_imgs.23/t/11152.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.23/t/11152.p1.jpeg"></a>
           NY film bulletin:  Jean Luc Godard issue
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=12920">
-        <img alt="View " src="/cine_img/www_imgs.26/t/12920.p2.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.26/t/12920.p2.jpeg"></a>
           DieMarquise von O... = La Marquise d'O...
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=15034">
-        <img alt="View " src="/cine_img/www_imgs.31/t/15034.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.31/t/15034.p1.jpeg"></a>
           Satyajit Ray
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=18847">
-        <img alt="View " src="/cine_img/www_imgs.38/t/18847.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.38/t/18847.p1.jpeg"></a>
           Lola Montes
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=21462">
-        <img alt="View " src="/cine_img/www_imgs.43/t/21462.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.43/t/21462.p1.jpeg"></a>
           Princess Mononoke
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=25109">
-        <img alt="View " src="/cine_img/www_imgs.51/t/25109.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.51/t/25109.p1.jpeg"></a>
           Ministry of fear
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=25214">
-        <img alt="View " src="/cine_img/www_imgs.51/t/25214.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.51/t/25214.p1.jpeg"></a>
           Phantom lady
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=25772">
-        <img alt="View " src="/cine_img/www_imgs.52/t/25772.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.52/t/25772.p1.jpeg"></a>
           The ascent
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=26462">
-        <img alt="View " src="/cine_img/www_imgs.53/t/26462.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.53/t/26462.p1.jpeg"></a>
           Fantastic planet
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=27320">
-        <img alt="View " src="/cine_img/www_imgs.55/t/27320.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.55/t/27320.p1.jpeg"></a>
           The films of Shohei Imamura
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=28081">
-        <img alt="View " src="/cine_img/www_imgs.57/t/28081.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.57/t/28081.p1.jpeg"></a>
           The birth of a nation
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=28082">
-        <img alt="View " src="/cine_img/www_imgs.57/t/28082.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.57/t/28082.p1.jpeg"></a>
           Aida
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=28087">
-        <img alt="View " src="/cine_img/www_imgs.57/t/28087.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.57/t/28087.p1.jpeg"></a>
           The river
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=28646">
-        <img alt="View " src="/cine_img/www_imgs.58/t/28646.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.58/t/28646.p1.jpeg"></a>
           Red desert
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=29146">
-        <img alt="View " src="/cine_img/www_imgs.59/t/29146.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.59/t/29146.p1.jpeg"></a>
           Star wars spectacular
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=33114">
-        <img alt="View " src="/cine_img/www_imgs.67/t/33114.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.67/t/33114.p1.jpeg"></a>
           Abbas Kiarostami : un certain regard
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=33995">
-        <img alt="View " src="/cine_img/www_imgs.68/t/33995.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.68/t/33995.p1.jpeg"></a>
           Women in Mizoguchi films
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=34991">
-        <img alt="View " src="/cine_img/www_imgs.70/t/34991.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.70/t/34991.p1.jpeg"></a>
           What's up Tiger Lily?
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=35395">
-        <img alt="View " src="/cine_img/www_imgs.71/t/35395.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.71/t/35395.p1.jpeg"></a>
           Singin' in the rain
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=35722">
-        <img alt="View " src="/cine_img/www_imgs.72/t/35722.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.72/t/35722.p1.jpeg"></a>
           I'm easy
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=36679">
-        <img alt="View " src="/cine_img/www_imgs.74/t/36679.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.74/t/36679.p1.jpeg"></a>
           Xie Jin retrospective
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=37103">
-        <img alt="View " src="/cine_img/www_imgs.75/t/37103.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.75/t/37103.p1.jpeg"></a>
           Black Caesar
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=38052">
-        <img alt="View " src="/cine_img/www_imgs.77/t/38052.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.77/t/38052.p1.jpeg"></a>
           Rocco and his brothers
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=38168">
-        <img alt="View " src="/cine_img/www_imgs.77/t/38168.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.77/t/38168.p1.jpeg"></a>
           Cleo from 5 to 7
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=38195">
-        <img alt="View " src="/cine_img/www_imgs.77/t/38195.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.77/t/38195.p1.jpeg"></a>
           Special issue Alain Resnais' Last year at Marienbad
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=38637">
-        <img alt="View " src="/cine_img/www_imgs.78/t/38637.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.78/t/38637.p1.jpeg"></a>
           Fellini!
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=40427">
-        <img alt="View " src="/cine_img/www_imgs.81/t/40427.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.81/t/40427.p1.jpeg"></a>
           Lacorazzata Potëmkin
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=41856">
-        <img alt="View " src="/cine_img/www_imgs.84/t/41856.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.84/t/41856.p1.jpeg"></a>
           Correspondence. Bruce Baillie.
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=41927">
-        <img alt="View " src="/cine_img/www_imgs.84/t/41927.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.84/t/41927.p1.jpeg"></a>
           John Sayles
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=44957">
-        <img alt="View " src="/cine_img/www_imgs.90/t/44957.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.90/t/44957.p1.jpeg"></a>
           Lourdes Portillo: an interview
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=45372">
-        <img alt="View " src="/cine_img/www_imgs.91/t/45372.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.91/t/45372.p1.jpeg"></a>
           Billy Wilder / Alain Resnais
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=47785">
-        <img alt="View " src="/cine_img/www_imgs.96/t/47785.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.96/t/47785.p1.jpeg"></a>
           Yvonne Rainer on feminism and her film
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=47850">
-        <img alt="View " src="/cine_img/www_imgs.96/t/47850.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.96/t/47850.p1.jpeg"></a>
           Chaplin: a life in pictures
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=48120">
-        <img alt="View " src="/cine_img/www_imgs.97/t/48120.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.97/t/48120.p1.jpeg"></a>
           Chef!
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=48738">
-        <img alt="View " src="/cine_img/www_imgs.98/t/48738.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.98/t/48738.p1.jpeg"></a>
           War and peace
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=49307">
-        <img alt="View " src="/cine_img/www_imgs.99/t/49307.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.99/t/49307.p1.jpeg"></a>
           Monsoon wedding
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=49625">
-        <img alt="View " src="/cine_img/www_imgs.100/t/49625.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.100/t/49625.p1.jpeg"></a>
           Ousmane Sembène: Pioneer of African cinema
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=51440">
-        <img alt="View " src="/cine_img/www_imgs.103/t/51440.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.103/t/51440.p1.jpeg"></a>
           Werner Herzog in conversation with Geoffrey O'Brien
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=52087">
-        <img alt="View " src="/cine_img/www_imgs.105/t/52087.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.105/t/52087.p1.jpeg"></a>
           Francis Ford Coppola simply wants to create a whole new art form
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=52222">
-        <img alt="View " src="/cine_img/www_imgs.105/t/52222.p1.jpeg"></a>
+        <img alt="View " src="/cinefiles/cine_img/www_imgs.105/t/52222.p1.jpeg"></a>
           Ways of seeing Senegal: interview with Trinh T. Minh-ha
     </div>
   </div>
